# High_performance_computing_exercises

./: .gitignore  README.md
ConwaysGameOfLive/: CMakeLists.txt  README.md
ConwaysGameOfLive/src/: cli.cc  main.cc
ConwaysGameOfLive/src/include/: cli.h
NeuralNetworks/TextSubmission/: 1.1.txt
NeuralNetworks/code/: CMakeLists.txt  main.cpp
NeuralNetworks/code/include/: Utils.h
NeuralNetworks/code/src/: Utils.cpp
OpenCL/: FastMatrixMultiplication.cpp  Makefile  MatAdd.cpp  MatMul.cpp  install_tbb.sh  matrix_addition.cl  matrix_multiplication.cl
OpenMP_MultiThreading/: HelloWorld.cpp  Matrix.cpp  Pi.cpp  export_paths.sh
OpenMP_MultiThreading/bugs/: bug1.cpp  bug2.cpp  bug3.cpp  bug4.cpp
SIMD/src/: CheckSum.cpp  Matrix.cpp  QuadraticEqn.cpp
VectorClass_Vc/: install_vc.sh
VectorClass_Vc/matrix/: Makefile  matrix.cpp
VectorClass_Vc/newton/: Makefile  newton.cpp
VectorClass_Vc/quadratic_equations/: Makefile  quadratic_equation.cpp
VectorClass_Vc/random_access/: Makefile  random_access.cpp
src/: World.cc  World.h  cli.cc  cli.h  main.cc
src/include/: World.h
